--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
   <title>SpendShare</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" />
+  <style>
+    /* For WebKit browsers (Chrome, Safari) */
+    body::-webkit-scrollbar {
+      width: 12px;
+      /* Width of the scrollbar */
+    }
+
+    body::-webkit-scrollbar-thumb {
+      background-color: #323232;
+      /* Color of the scrollbar thumb */
+      border-radius: 6px;
+      /* Rounded corners of the scrollbar thumb */
+    }
+
+    body::-webkit-scrollbar-track {
+      background-color: #3c3c3c;
+      /* Color of the scrollbar track */
+    }
+
+    /* For Firefox */
+    body {
+      scrollbar-color: #353536 #c5c5c5;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: #485563;
+      /* fallback for old browsers */
+      background: -webkit-linear-gradient(to top, #29323c, #485563);
+      /* Chrome 10-25, Safari 5.1-6 */
+      background: linear-gradient(to top, #29323c, #485563);
+      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    }
+  </style>
 </head>
 
 <body>
