--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/assets/icons/favicon.ico" />
+  <link rel="icon" type="image/svg+xml" href="/assets/icons/favicon1.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SpendShare</title>
+  <title>Splitwise</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" />
   <style>
@@ -27,21 +27,16 @@
       /* Color of the scrollbar track */
     }
 
-    /* For Firefox */
-    body {
-      scrollbar-color: #353536 #c5c5c5;
+    body,
+    html {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      /* Prevent default browser scrollbars */
+      height: 100%;
     }
 
-    body {
-      margin: 0;
-      font-family: 'Inter', sans-serif;
-      background: #485563;
-      /* fallback for old browsers */
-      background: -webkit-linear-gradient(to top, #29323c, #485563);
-      /* Chrome 10-25, Safari 5.1-6 */
-      background: linear-gradient(to top, #29323c, #485563);
-      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    }
+    /* For Firefox */
   </style>
 </head>
 
