--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/assets/icons/favicon1.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Splitwise</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" />
@@ -34,6 +34,18 @@
       overflow: hidden;
       height: 100%;
     }
+
+    /* General styles for all devices */
+
+    @media only screen and (max-width: 600px) {
+
+      .scrollable-container {
+        max-height: none;
+        /* Allow it to expand based on content */
+      }
+
+    }
+
 
     /* For Firefox */
   </style>
