--- a/index.html
+++ b/index.html
@@ -31,21 +31,9 @@
     html {
       margin: 0;
       padding: 0;
-      overflow: hidden;
+      overflow: auto;
       height: 100%;
     }
-
-    /* General styles for all devices */
-
-    @media only screen and (max-width: 600px) {
-
-      .scrollable-container {
-        max-height: none;
-        /* Allow it to expand based on content */
-      }
-
-    }
-
 
     /* For Firefox */
   </style>
