--- a/index.html
+++ b/index.html
@@ -31,8 +31,16 @@
     html {
       margin: 0;
       padding: 0;
-      overflow: auto;
+      overflow: hidden;
       height: 100%;
+    }
+
+    @media only screen and (max-width: 600px) {
+
+      body,
+      html {
+        height: 98%;
+      }
     }
 
     /* For Firefox */
