--- a/index.html
+++ b/index.html
@@ -35,12 +35,7 @@
       height: 100%;
     }
 
-    @media only screen and (max-width: 600px) {
-
-      html {
-        height: 98%;
-      }
-    }
+    @media only screen and (max-width: 600px) {}
 
     /* For Firefox */
   </style>
